# SuperRecorder

FFmpegBox/: CMakeLists.txt  build.gradle
FFmpegBox/libs/include/: config.h
FFmpegBox/src/main/cpp/: ffmpeg.c  ffmpeg_box.cpp
FFmpegBox/src/main/java/cn/gavinliu/android/ffmpeg/box/: FFmpegBox.java
app/: build.gradle
app/src/androidTest/java/com/yibogame/superrecorder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/yibogame/superrecorder/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/yibogame/superrecorder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
